install
A parancsfájl elindult ekkor: 2010. dec.  7., kedd, 19.15.13 CET
dani@dani-laptop:~/ruby/proba/teszt$ rails scd ruby/proba/teszt/rm -rf spec/helpers views  helperscd ruby/proba/teszt/rails s                    script/plugin install 
bash: script/plugin: Nincs ilyen fájl vagy könyvtár
dani@dani-laptop:~/ruby/proba/teszt$ raisl  ls console
Loading development environment (Rails 3.0.1)
ree-1.8.7-2010.02 > script/plugin install 
SyntaxError: compile error
(irb):1: syntax error, unexpected tIDENTIFIER, expecting kDO or '{' or '('
script/plugin install 
                     ^
	from (irb):1
ree-1.8.7-2010.02 > script/plugin install 
SyntaxError: compile error
(irb):2: syntax error, unexpected tIDENTIFIER, expecting kDO or '{' or '('
script/plugin install 
                     ^
	from (irb):2
ree-1.8.7-2010.02 > svn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > ssvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > scsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > scrsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > scrisvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > scripsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > scriptsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/svn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/psvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plusvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugisvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/pluginsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin svn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin isvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin insvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin inree-1.8.7-2010.02 > script/plugin inssvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin instsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin instasvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin instalsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin installsvn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin install svn://errtheblog.com/svn/plugins/will_paginate)ree-1.8.7-2010.02 > script/plugin install ree-1.8.7-2010.02 > script/plugin install sree-1.8.7-2010.02 > script/plugin install svree-1.8.7-2010.02 > script/plugin install svnree-1.8.7-2010.02 > script/plugin install svn:ree-1.8.7-2010.02 > script/plugin install svn:/ree-1.8.7-2010.02 > script/plugin install svn://ree-1.8.7-2010.02 > script/plugin install svn://eree-1.8.7-2010.02 > script/plugin install svn://erree-1.8.7-2010.02 > script/plugin install svn://errree-1.8.7-2010.02 > script/plugin install svn://errtree-1.8.7-2010.02 > script/plugin install svn://errthree-1.8.7-2010.02 > script/plugin install svn://errtheree-1.8.7-2010.02 > script/plugin install svn://errthebree-1.8.7-2010.02 > script/plugin install svn://errtheblree-1.8.7-2010.02 > script/plugin install svn://errthebloree-1.8.7-2010.02 > script/plugin install svn://errtheblogree-1.8.7-2010.02 > script/plugin install svn://errtheblog.ree-1.8.7-2010.02 > script/plugin install svn://errtheblog.cree-1.8.7-2010.02 > script/plugin install svn://errtheblog.coree-1.8.7-2010.02 > script/plugin install svn://errtheblog.comree-1.8.7-2010.02 > script/plugin install svn://errtheblog.com/ree-1.8.7-2010.02 > script/plugin install svn://errtheblog